--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -14640,7 +14640,7 @@ fieldset[disabled] .btn {
   }
 }
 @supports (overflow:clip) {
-  ._1yqbv3i {
+  .page-shell__menu-item-text {
     overflow: clip!important
   }
 }
