--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -2991,12 +2991,12 @@
   }
 }
 @media print {
-  ._1ynbv25 {
+  .page-shell-mobile__container {
     display: block !important;
   }
 }
 @media (min-width: 744px) {
-  ._1ynbv25 {
+  .page-shell-mobile__container {
     display: none !important;
   }
 }
@@ -9140,7 +9140,7 @@ select[disabled] {
 ._jgit7bg:active {
   color: #ff385c !important;
 }
-._45o9ez {
+.page-shell__menu-item {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   -webkit-box-direction: normal !important;
@@ -9173,16 +9173,16 @@ select[disabled] {
   hyphens: auto !important;
   padding: 0 2px !important;
 }
-._45o9ez:active {
+.page-shell__menu-item:active {
   outline: 0 !important;
   color: #ff385c !important;
 }
-._45o9ez:disabled {
+.page-shell__menu-item:disabled {
   opacity: 0.5 !important;
   cursor: default !important;
   color: graytext !important;
 }
-._tbbnrnx {
+.page-shell__menu-item-icon-wrapper {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   -webkit-box-pack: center !important;
@@ -9202,7 +9202,7 @@ select[disabled] {
   color: #b0b0b0 !important;
   position: relative !important;
 }
-._tbbnrnx:active {
+.page-shell__menu-item-icon-wrapper:active {
   color: #ff385c !important;
 }
 ._1et6785v {
@@ -20155,7 +20155,7 @@ full__margin-bottom {
   font-size: 20px !important;
   font-weight: 800 !important;
 }
-._qnqe0zo {
+.container-inset {
   display: none;
 }
 ._168rcn0 {
@@ -20349,7 +20349,7 @@ full__margin-bottom {
   border-bottom: 1px solid #ddd !important;
   margin: 32px 0 !important;
 }
-._2b0qwl {
+.page-shell-mobile__nav {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   background: #fff !important;
@@ -20366,7 +20366,7 @@ full__margin-bottom {
   position: relative !important;
   z-index: 1 !important;
 }
-._1dxtmbip {
+.page-shell-mobile__nav-btn {
   cursor: pointer !important;
   display: inline-block !important;
   margin: 0 -8px !important;
@@ -20396,7 +20396,7 @@ full__margin-bottom {
   color: var(--f-k-smk-x) !important;
   text-decoration: none !important;
 }
-._k4m5s3s {
+.page-shell-mobile__container-wrapper {
   background: #fff !important;
   position: sticky !important;
   transition: -ms-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),
@@ -20405,7 +20405,7 @@ full__margin-bottom {
   top: 0 !important;
   z-index: 4 !important;
 }
-._k4m5s3s::before {
+.page-shell-mobile__container-wrapper::before {
   inset: -100px 0 0 !important;
   box-shadow: rgb(0 0 0 / 16%) 0 -2px 8px !important;
   content: '' !important;
@@ -28790,7 +28790,7 @@ html :where(img[class*='wp-image-']) {
     display: flex !important;
   }
 }
-._qnqe0zo {
+.container-inset {
   -webkit-box-align: center !important;
   display: flex !important;
   align-items: center !important;
@@ -28842,13 +28842,13 @@ html :where(img[class*='wp-image-']) {
   visibility: hidden !important;
 }
 @supports (margin-bottom: env(safe-area-inset-bottom)) {
-  ._qnqe0zo {
+  .container-inset {
     margin-bottom: env(safe-area-inset-bottom) !important;
     padding-left: env(safe-area-inset-left) !important;
     padding-right: env(safe-area-inset-right) !important;
   }
 }
-._h0klba {
+.page-shell__menu {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   -webkit-box-align: start !important;
@@ -28909,7 +28909,7 @@ html :where(img[class*='wp-image-']) {
   z-index: 1 !important;
   border-bottom: 1px solid #ebebeb !important;
 }
-._1ran6xy {
+.page-shell-mobile__nav-icon-wrapper {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   -webkit-flex: 1 !important;
@@ -29389,20 +29389,20 @@ html :where(img[class*='wp-image-']) {
   transform: scale(1, 1) !important;
   transition-duration: 62.5ms !important;
 }
-._1h1q576 {
+.page-shell-mobile__header {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     'Helvetica Neue', sans-serif !important;
   font-weight: 400 !important;
   margin-bottom: 16px !important;
 }
-._1nz8la2s {
+.page-shell-mobile__header-wrapper {
   -webkit-box-align: baseline !important;
   -webkit-box-pack: justify !important;
   justify-content: space-between !important;
   align-items: baseline !important;
   display: inline-flex !important;
 }
-._1y5sjm8 {
+.page-shell-mobile__header-h1 {
   font-size: 22px !important;
   font-weight: 800 !important;
   line-height: 26px !important;
@@ -31115,7 +31115,7 @@ tr.show-desktop {
   transition: opacity 150ms ease-out !important;
   pointer-events: none !important;
 }
-._2b0qwl {
+.page-shell-mobile__nav {
   -webkit-box-align: center !important;
   background: #fff !important;
   display: flex !important;
@@ -31126,11 +31126,11 @@ tr.show-desktop {
   position: relative !important;
   z-index: 1 !important;
 }
-._1o4zwko {
+.page-shell-mobile__nav-wrapper {
   margin-right: auto !important;
   overflow: hidden !important;
 }
-._1dxtmbip {
+.page-shell-mobile__nav-btn {
   cursor: pointer !important;
   display: inline-block !important;
   margin: 0 -8px !important;
@@ -31153,7 +31153,7 @@ tr.show-desktop {
   color: var(--f-k-smk-x) !important;
   text-decoration: none !important;
 }
-._1ran6xy {
+.page-shell-mobile__nav-icon-wrapper {
   -webkit-box-align: center !important;
   flex: 1 1 0% !important;
   display: flex !important;
@@ -31164,10 +31164,10 @@ tr.show-desktop {
   color: #222 !important;
   max-width: 100% !important;
 }
-._zzdavs {
+.page-shell-mobile__nav-icon {
   padding-right: 8px !important;
 }
-._1s0b0yb {
+.page-shell-mobile__nav-overlay {
   text-overflow: ellipsis !important;
   white-space: nowrap !important;
   overflow: hidden !important;
@@ -34497,7 +34497,7 @@ tr.show-desktop {
   ._10ejfg4u {
     visibility: visible;
   }
-  ._1ynbv25,
+  .page-shell-mobile__container,
   .search-bar-xs {
     display: none;
   }
@@ -37550,14 +37550,14 @@ tr.show-desktop {
   flex: 1;
   min-height: 100px;
 }
-.w1y25zdv[class][class].i144hzgs[class][class] .c1mzlq0d[class][class] {
+.page-shell-mobile__alert-notification[class][class].page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-icon[class][class] {
   color: var(--f-mkcy-f);
 }
-.dir.w1y25zdv[class][class].i144hzgs[class][class] .c1mzlq0d[class][class] {
+.dir.page-shell-mobile__alert-notification[class][class].page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-icon[class][class] {
   background-color: var(--fhi-qn-u);
   border-radius: 50%;
 }
-.i144hzgs[class][class] {
+.page-shell-mobile__alert-attr-notifcation[class][class] {
   display: -webkit-inline-box;
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
@@ -37565,7 +37565,7 @@ tr.show-desktop {
   contain: layout;
   width: 100%;
 }
-.i144hzgs[class][class] .c1mzlq0d[class][class] {
+.page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-icon[class][class] {
   width: 44px;
   height: 44px;
   display: -webkit-box;
@@ -37582,7 +37582,7 @@ tr.show-desktop {
   justify-content: center;
   color: var(--f-k-smk-x);
 }
-.i144hzgs[class][class] .a106r80v[class][class] {
+.page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-header-button[class][class] {
   display: -webkit-inline-box;
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
@@ -40734,31 +40734,31 @@ tr.show-desktop {
     overflow: clip;
   }
 }
-.e1rue1xl[class][class].i144hzgs[class][class] .c1mzlq0d[class][class] {
+.e1rue1xl[class][class].page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-icon[class][class] {
   color: var(--f-mkcy-f);
 }
-.dir.e1rue1xl[class][class].i144hzgs[class][class] .c1mzlq0d[class][class] {
+.dir.e1rue1xl[class][class].page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-icon[class][class] {
   background-color: var(--k-va-tnc);
   border-radius: 50%;
 }
-.i144hzgs[class][class] {
+.page-shell-mobile__alert-attr-notifcation[class][class] {
   display: inline-flex;
   contain: layout;
   width: 100%;
 }
-.dir.i144hzgs[class][class] {
+.dir.page-shell-mobile__alert-attr-notifcation[class][class] {
   border: 1px solid var(--j-qkgmf);
   background-color: var(--f-mkcy-f);
   border-radius: 12px;
   padding: 16px;
 }
-.dir-ltr.i144hzgs[class][class] .ccmqn89[class][class] {
+.dir-ltr.page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-icon-wrapper[class][class] {
   margin-right: 12px;
 }
-.dir-rtl.i144hzgs[class][class] .ccmqn89[class][class] {
+.dir-rtl.page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-icon-wrapper[class][class] {
   margin-left: 12px;
 }
-.i144hzgs[class][class] .c1mzlq0d[class][class] {
+.page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-icon[class][class] {
   width: 44px;
   height: 44px;
   display: flex;
@@ -40766,33 +40766,33 @@ tr.show-desktop {
   justify-content: center;
   color: var(--f-k-smk-x);
 }
-.i144hzgs[class][class] .hk7fm8a[class][class] {
+.page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-header-text[class][class] {
   color: var(--f-k-smk-x);
   font-weight: var(--h-oqhch);
   font-size: var(--c-zdwk-p);
   line-height: var(--j-p-z-kco);
 }
-.dir.i144hzgs[class][class] .hk7fm8a[class][class] {
+.dir.page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-header-text[class][class] {
   margin-bottom: 4px;
 }
-.i144hzgs[class][class] .m1g17ezz[class][class] {
+.page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-header-desc[class][class] {
   color: var(--f-k-smk-x);
   font-size: var(--c-zdwk-p);
   line-height: var(--j-p-z-kco);
 }
-.i144hzgs[class][class] .h1q6ioub[class][class] {
+.page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-header-desc-color[class][class] {
   color: var(--fo-jk-r-s);
 }
-.i144hzgs[class][class] .a106r80v[class][class] {
+.page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-header-button[class][class] {
   display: inline-flex;
 }
-.dir.i144hzgs[class][class] .a106r80v[class][class] {
+.dir.page-shell-mobile__alert-attr-notifcation[class][class] .page-shell-mobile__alert-header-button[class][class] {
   margin-top: 12px;
 }
-.dir-ltr.i144hzgs[class][class] .ady5cna[class][class] {
+.dir-ltr.page-shell-mobile__alert-attr-notifcation[class][class] .ady5cna[class][class] {
   margin-right: 20px;
 }
-.dir-rtl.i144hzgs[class][class] .ady5cna[class][class] {
+.dir-rtl.page-shell-mobile__alert-attr-notifcation[class][class] .ady5cna[class][class] {
   margin-left: 20px;
 }
 .cm4lcvy[class][class] {
@@ -41485,7 +41485,7 @@ tr.show-desktop {
     padding-right: env(safe-area-inset-right) !important;
   }
 }
-._h0klba {
+.page-shell__menu {
   -webkit-box-pack: center !important;
   -webkit-box-align: start !important;
   flex: 1 0 auto !important;
@@ -41495,7 +41495,7 @@ tr.show-desktop {
   margin: 0 auto !important;
   max-width: 560px !important;
 }
-._45o9ez {
+.page-shell__menu-item {
   -webkit-box-align: center !important;
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
@@ -41515,7 +41515,7 @@ tr.show-desktop {
   hyphens: auto !important;
   padding: 0 2px !important;
 }
-._tbbnrnx {
+.page-shell__menu-item-icon-wrapper {
   -webkit-box-align: center !important;
   -webkit-box-pack: center !important;
   width: 30px !important;
@@ -41527,7 +41527,7 @@ tr.show-desktop {
   color: #b0b0b0 !important;
   position: relative !important;
 }
-._1yqbv3i {
+.page-shell__menu-item-text {
   font-size: 10px !important;
   line-height: 12px !important;
   overflow: hidden !important;
@@ -41540,7 +41540,7 @@ tr.show-desktop {
   color: #717171 !important;
 }
 @supports (overflow: clip) {
-  ._1yqbv3i {
+  .page-shell__menu-item-text {
     overflow: clip !important;
   }
 }
@@ -41613,11 +41613,11 @@ tr.show-desktop {
   height: 100% !important;
   position: unset !important;
 }
-._siy8gh {
+.page-shell__visibility {
   display: none !important;
 }
 @media (min-width: 744px) {
-  ._siy8gh {
+  .page-shell__visibility {
     display: block !important;
   }
 }
@@ -42053,7 +42053,7 @@ tr.show-desktop {
     display: none !important;
   }
 }
-._p03egf {
+.page-shell-mobile__mb-16 {
   margin-bottom: 16px !important;
 }
 ._15m7xnk {
@@ -45631,7 +45631,7 @@ tr.show-desktop {
     margin-bottom: 24px !important;
   }
 }
-._1ynbv25 {
+.page-shell-mobile__container {
   display: block !important;
 }
 ._1pdnceg::before {
