--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -13512,7 +13512,7 @@ h3:first-child {
   padding: 0 !important;
   margin: 0 !important;
 }
-._b21f4g {
+.container__border-0 {
   border: 0 !important;
   clip: rect(0 0 0 0) !important;
   clip-path: inset(100%) !important;
@@ -37821,7 +37821,7 @@ tr.show-desktop {
     text-decoration: var(--font-link-text-decoration, none) !important;
   }
 }
-._1h75pd34 {
+.header__nav-profile-btn {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   -webkit-appearance: none !important;
@@ -38997,11 +38997,11 @@ tr.show-desktop {
 .dir-rtl.animation__iteration-count-infinite.animation__iteration-count-infinite {
   animation-iteration-count: infinite;
 }
-.dir-ltr.t2pjd0h[class][class] {
+.dir-ltr.incoming__container[class][class] {
   right: 0;
   left: 0;
 }
-.dir-rtl.t2pjd0h[class][class] {
+.dir-rtl.incoming__container[class][class] {
   left: 0;
   right: 0;
 }
@@ -39290,11 +39290,11 @@ tr.show-desktop {
     animation-duration: 0s;
   }
 }
-.c177491c[class][class] {
+.header__nav-btn-container-color[class][class] {
   color: var(--f-k-smk-x);
   transition: color 250ms;
 }
-.c1jdlqzl[class][class] {
+.header__nav-btn-container[class][class] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -39319,7 +39319,7 @@ tr.show-desktop {
   white-space: nowrap;
   z-index: 1;
 }
-.dir.c1jdlqzl[class][class] {
+.dir.header__nav-btn-container[class][class] {
   background: 0 0;
   border: 0;
   cursor: pointer;
@@ -39327,44 +39327,44 @@ tr.show-desktop {
   padding: 12px;
   text-align: inherit;
 }
-.dir.c1jdlqzl[class][class]::before {
+.dir.header__nav-btn-container[class][class]::before {
   border-radius: 22px;
 }
-.dir-ltr.c1jdlqzl[class][class]::before {
+.dir-ltr.header__nav-btn-container[class][class]::before {
   left: -3px;
   right: -3px;
 }
-.dir-rtl.c1jdlqzl[class][class]::before {
+.dir-rtl.header__nav-btn-container[class][class]::before {
   right: -3px;
   left: -3px;
 }
-.c1jdlqzl[class][class]:focus-visible::before {
+.header__nav-btn-container[class][class]:focus-visible::before {
   transition: box-shadow 0.2s;
 }
-.dir.c1jdlqzl[class][class]:focus-visible::before {
+.dir.header__nav-btn-container[class][class]:focus-visible::before {
   -webkit-transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px var(--f-mkcy-f);
 }
 @media (prefers-reduced-motion: reduce) {
-  .c1jdlqzl[class][class]:focus-visible::before {
+  .header__nav-btn-container[class][class]:focus-visible::before {
     transition: none;
   }
-  .dir.c1jdlqzl[class][class]:focus-visible::before {
+  .dir.header__nav-btn-container[class][class]:focus-visible::before {
     -webkit-transition: none;
   }
 }
-.c1jdlqzl[class][class]:focus[data-focus-visible-added]::before {
+.header__nav-btn-container[class][class]:focus[data-focus-visible-added]::before {
   transition: box-shadow 0.2s;
 }
-.dir.c1jdlqzl[class][class]:focus[data-focus-visible-added]::before {
+.dir.header__nav-btn-container[class][class]:focus[data-focus-visible-added]::before {
   -webkit-transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px var(--f-mkcy-f);
 }
 @media (prefers-reduced-motion: reduce) {
-  .c1jdlqzl[class][class]:focus[data-focus-visible-added]::before {
+  .header__nav-btn-container[class][class]:focus[data-focus-visible-added]::before {
     transition: none;
   }
-  .dir.c1jdlqzl[class][class]:focus[data-focus-visible-added]::before {
+  .dir.header__nav-btn-container[class][class]:focus[data-focus-visible-added]::before {
     -webkit-transition: none;
   }
 }
@@ -40895,11 +40895,11 @@ tr.show-desktop {
 .dir-rtl.p1qe1cgb[class][class] {
   margin-right: auto;
 }
-.dir.c177491c[class][class] {
+.dir.header__nav-btn-container-color[class][class] {
   -webkit-transition: color 250ms;
   transition: color 250ms;
 }
-.c1jdlqzl[class][class] {
+.header__nav-btn-container[class][class] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -40925,29 +40925,29 @@ tr.show-desktop {
   white-space: nowrap;
   z-index: 1;
 }
-.dir.c1jdlqzl[class][class]:focus-visible::before {
+.dir.header__nav-btn-container[class][class]:focus-visible::before {
   -webkit-transition: box-shadow 0.2s;
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px var(--f-mkcy-f);
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c1jdlqzl[class][class]:focus-visible::before {
+  .dir.header__nav-btn-container[class][class]:focus-visible::before {
     -webkit-transition: none;
     transition: none;
   }
 }
-.dir.c1jdlqzl[class][class]:focus[data-focus-visible-added]::before {
+.dir.header__nav-btn-container[class][class]:focus[data-focus-visible-added]::before {
   -webkit-transition: box-shadow 0.2s;
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px var(--f-mkcy-f);
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c1jdlqzl[class][class]:focus[data-focus-visible-added]::before {
+  .dir.header__nav-btn-container[class][class]:focus[data-focus-visible-added]::before {
     -webkit-transition: none;
     transition: none;
   }
 }
-.l1hgmivi[class][class] {
+.header__nav-btn-container-text[class][class] {
   -webkit-align-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -41045,7 +41045,7 @@ tr.show-desktop {
   width: 30px;
   z-index: 1;
 }
-._1wzp0xs {
+.header__nav-profile-img {
   background-color: currentcolor !important;
   border-radius: 50% !important;
   display: block !important;
@@ -41621,7 +41621,7 @@ tr.show-desktop {
     display: block !important;
   }
 }
-._176ugpa {
+.header__nav-btn-wrapper {
   -webkit-box-pack: end !important;
   -ms-flex-pack: end !important;
   display: -webkit-box !important;
@@ -41654,11 +41654,11 @@ tr.show-desktop {
   position: relative !important;
   z-index: 1 !important;
 }
-._167wsvl {
+.header__nav-d-inline-relative {
   display: inline !important;
   position: relative !important;
 }
-._1h75pd34 {
+.header__nav-profile-btn {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   -webkit-appearance: none !important;
@@ -41699,54 +41699,54 @@ tr.show-desktop {
   transition: box-shadow 0.2s !important;
   z-index: 1 !important;
 }
-._1h75pd34::-moz-focus-inner {
+.header__nav-profile-btn::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1h75pd34:focus::-moz-focus-inner {
+.header__nav-profile-btn:focus::-moz-focus-inner {
   border: none !important;
 }
-._1h75pd34:-moz-focusring {
+.header__nav-profile-btn:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1h75pd34 {
+  .header__nav-profile-btn {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1h75pd34:focus-visible {
+.header__nav-profile-btn:focus-visible {
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px var(--f-mkcy-f) !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1h75pd34:focus-visible {
+  .header__nav-profile-btn:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1h75pd34:focus[data-focus-visible-added] {
+.header__nav-profile-btn:focus[data-focus-visible-added] {
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px var(--f-mkcy-f) !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1h75pd34:focus[data-focus-visible-added] {
+  .header__nav-profile-btn:focus[data-focus-visible-added] {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1h75pd34:hover {
+.header__nav-profile-btn:hover {
   box-shadow: var(--e-swdx-p) !important;
 }
-._1xp7o8n {
+.header__nav-profile-img-wrapper {
   color: var(--fo-jk-r-s) !important;
   -webkit-flex: 0 0 30px !important;
   -ms-flex: 0 0 30px !important;
@@ -42180,46 +42180,46 @@ tr.show-desktop {
     padding-right: 2px !important;
   }
 }
-.t2pjd0h[class][class] {
+.incoming__container[class][class] {
   top: 0;
   bottom: 0;
   pointer-events: none;
   position: var(--transition-layer_position, fixed);
   opacity: var(--view-to-view-transition-element-opacity, 0);
 }
-.dir.t2pjd0h[class][class] {
+.dir.incoming__container[class][class] {
   right: 0;
   left: 0;
 }
-.t6qlz27[class][class] {
+.incoming__wrapper[class][class] {
   position: absolute;
   z-index: 2000;
   opacity: var(--view-to-view-transition-element-opacity, 0);
   visibility: var(--view-to-view-transition-element-visibility, hidden);
 }
-.t1nrbpkt[class][class] {
+.app-theme-visibility[class][class] {
   top: 0;
   bottom: 0;
   pointer-events: none;
   position: var(--transition-layer_position, fixed);
 }
-.dir.t1nrbpkt[class][class] {
+.dir.app-theme-visibility[class][class] {
   right: 0;
   left: 0;
 }
 .dprtsy3[class][class] {
   display: none;
 }
-.c177491c[class][class] {
+.header__nav-btn-container-color[class][class] {
   color: var(--f-k-smk-x);
 }
-.dir.c177491c[class][class] {
+.dir.header__nav-btn-container-color[class][class] {
   transition: color 250ms;
 }
-.dir.c177491c[class][class]:hover::before {
+.dir.header__nav-btn-container-color[class][class]:hover::before {
   background: var(---pc-g-v-g);
 }
-.c1jdlqzl[class][class] {
+.header__nav-btn-container[class][class] {
   appearance: none;
   color: inherit;
   display: inline-block;
@@ -42239,7 +42239,7 @@ tr.show-desktop {
   white-space: nowrap;
   z-index: 1;
 }
-.dir.c1jdlqzl[class][class] {
+.dir.header__nav-btn-container[class][class] {
   background: 0 0;
   border: 0;
   cursor: pointer;
@@ -42247,54 +42247,54 @@ tr.show-desktop {
   text-align: inherit;
   padding: 12px;
 }
-.dir.c1jdlqzl[class][class]::-moz-focus-inner {
+.dir.header__nav-btn-container[class][class]::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.c1jdlqzl[class][class]:focus::-moz-focus-inner {
+.dir.header__nav-btn-container[class][class]:focus::-moz-focus-inner {
   border: none;
 }
-.c1jdlqzl[class][class]:-moz-focusring {
+.header__nav-btn-container[class][class]:-moz-focusring {
   outline: 0;
 }
-.c1jdlqzl[class][class]::before {
+.header__nav-btn-container[class][class]::before {
   bottom: 0;
   content: '';
   position: absolute;
   top: 0;
   z-index: 0;
 }
-.dir.c1jdlqzl[class][class]::before {
+.dir.header__nav-btn-container[class][class]::before {
   border-radius: 22px;
   left: -3px;
   right: -3px;
 }
-.c1jdlqzl[class][class]:focus-visible {
+.header__nav-btn-container[class][class]:focus-visible {
   z-index: 2;
 }
-.dir.c1jdlqzl[class][class]:focus-visible::before {
+.dir.header__nav-btn-container[class][class]:focus-visible::before {
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px var(--f-mkcy-f);
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c1jdlqzl[class][class]:focus-visible::before {
+  .dir.header__nav-btn-container[class][class]:focus-visible::before {
     transition: none;
   }
 }
-.c1jdlqzl[class][class]:focus[data-focus-visible-added] {
+.header__nav-btn-container[class][class]:focus[data-focus-visible-added] {
   z-index: 2;
 }
-.dir.c1jdlqzl[class][class]:focus[data-focus-visible-added]::before {
+.dir.header__nav-btn-container[class][class]:focus[data-focus-visible-added]::before {
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px var(--f-mkcy-f);
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.c1jdlqzl[class][class]:focus[data-focus-visible-added]::before {
+  .dir.header__nav-btn-container[class][class]:focus[data-focus-visible-added]::before {
     transition: none;
   }
 }
-.l1hgmivi[class][class] {
+.header__nav-btn-container-text[class][class] {
   align-items: center;
   display: flex;
   height: 100%;
@@ -49695,7 +49695,7 @@ a:hover {
   vertical-align: middle !important;
   margin-right: 0 !important;
 }
-._b21f4g {
+.container__border-0 {
   border: 0 !important;
   clip: rect(0 0 0 0) !important;
   -webkit-clip-path: inset(100%) !important;
