--- a/src/css/layouts/header.css
+++ b/src/css/layouts/header.css
@@ -842,7 +842,7 @@
     flex: 1 0 140px !important;
   }
 }
-._1douprn {
+.header__nav-spacer {
   -webkit-flex: 0 1 auto !important;
   -ms-flex: 0 1 auto !important;
   flex: 0 1 auto !important;
@@ -861,7 +861,7 @@
     flex: 1 0 140px !important;
   }
 }
-._1o0em9y {
+.page-shell__navbar {
   height: 80px !important;
 }
 .header__brand {
