--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13572,14 +13572,14 @@ fieldset[disabled] .btn {
 }
 /* /Tooltip */
 
-._1mqc21n {
+.page-shell-mobile__container-ml-16 {
   margin-left: 16px!important
 }
 ._18dgbyf,
 .mb2 {
   margin-bottom: 16px!important
 }
-._1mqc21n,
+.page-shell-mobile__container-ml-16,
 .ml2 {
   margin-left: 16px!important
 }
@@ -13620,7 +13620,7 @@ fieldset[disabled] .btn {
   }
 }
 @media (min-width:744px) {
-  ._1udzt2s,
+  .page-shell-mobile__display-none,
   .hide-md {
     display: none!important
   }
@@ -14682,7 +14682,7 @@ fieldset[disabled] .btn {
     border-radius: 12px!important
   }
 }
-._1pusc02v {
+.footer__max-width {
   -webkit-box-direction: normal!important;
   -webkit-box-orient: vertical!important;
   background: #fff!important;
@@ -14701,7 +14701,7 @@ fieldset[disabled] .btn {
   animation-name: keyframe_d37zz3!important
 }
 @media (min-width:744px) {
-  ._1pusc02v {
+  .footer__max-width {
     width: 100%!important;
     max-width: 376px!important;
     border-radius: 12px!important
