--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -3564,7 +3564,7 @@
     margin-bottom: 48px !important;
   }
 }
-._f2hxk3s {
+.page-shell-mobile__lang-btn {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   font-family: inherit !important;
@@ -19742,7 +19742,7 @@ h3:first-child {
   border-top: none !important;
 }
 @media (min-width: 744px) {
-  ._15m7xnk {
+  .page-shell-mobile__footer-spacer {
     display: none !important;
   }
 }
@@ -28751,7 +28751,7 @@ html :where(img[class*='wp-image-']) {
     padding-bottom: 0 !important;
   }
 }
-._f2hxk3s {
+.page-shell-mobile__lang-btn {
   -webkit-box-align: center !important;
   font-family: inherit !important;
   font-weight: inherit !important;
@@ -28772,7 +28772,7 @@ html :where(img[class*='wp-image-']) {
   white-space: nowrap !important;
   text-decoration: none !important;
 }
-._1juxowe {
+.page-shell-mobile__footer-spacer-wrapper {
   -webkit-box-pack: center !important;
   display: flex !important;
   justify-content: center !important;
@@ -42049,27 +42049,27 @@ tr.show-desktop {
   padding-left: 1px !important;
 }
 @media (min-width: 744px) {
-  ._1udzt2s {
+  .page-shell-mobile__display-none {
     display: none !important;
   }
 }
 .page-shell-mobile__mb-16 {
   margin-bottom: 16px !important;
 }
-._15m7xnk {
+.page-shell-mobile__footer-spacer {
   display: none !important;
 }
 @media (min-width: 744px) {
-  ._15m7xnk {
+  .page-shell-mobile__footer-spacer {
     display: initial !important;
   }
 }
 @media (min-width: 1128px) {
-  ._15m7xnk {
+  .page-shell-mobile__footer-spacer {
     display: none !important;
   }
 }
-._1juxowe {
+.page-shell-mobile__footer-spacer-wrapper {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   display: -webkit-box !important;
@@ -42081,7 +42081,7 @@ tr.show-desktop {
   justify-content: center !important;
   margin-bottom: 16px !important;
 }
-._xh0r19 {
+.footer__social-ml-32 {
   margin-left: 32px !important;
 }
 ._ar9stc {
@@ -42100,17 +42100,17 @@ tr.show-desktop {
     justify-content: space-between !important;
   }
 }
-._19c5bku:not(last-child) {
+.page-shell-mobile__lang-wrapper:not(last-child) {
   margin-right: 24px !important;
 }
-._144l3kj,
-._pgfqnw {
+.page-shell-mobile__lang-text,
+.page-shell-mobile__lang-icon-currency {
   font-weight: 600 !important;
 }
-._144l3kj:hover {
+.page-shell-mobile__lang-text:hover {
   text-decoration: underline !important;
 }
-._f2hxk3s {
+.page-shell-mobile__lang-btn {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   font-family: inherit !important;
@@ -42143,39 +42143,39 @@ tr.show-desktop {
   text-decoration: none !important;
 }
 @media (hover: hover) {
-  ._f2hxk3s:hover {
+  .page-shell-mobile__lang-btn:hover {
     cursor: pointer !important;
     color: inherit !important;
     text-decoration: underline !important;
   }
 }
-._f2hxk3s:disabled {
+.page-shell-mobile__lang-btn:disabled {
   cursor: not-allowed !important;
 }
 @media (hover: hover) {
-  ._f2hxk3s:disabled:hover {
+  .page-shell-mobile__lang-btn:disabled:hover {
     text-decoration: none !important;
   }
 }
-._f2hxk3s:hover {
+.page-shell-mobile__lang-btn:hover {
   text-decoration: none !important;
 }
-._f2hxk3s:focus {
+.page-shell-mobile__lang-btn:focus {
   color: inherit !important;
   text-decoration: none !important;
 }
 @media (min-width: 744px) {
-  ._pd8gea {
+  .page-shell-mobile__footer {
     text-align: center !important;
   }
 }
 @media (min-width: 1128px) {
-  ._pd8gea {
+  .page-shell-mobile__footer {
     text-align: left !important;
   }
 }
 @media (min-width: 1128px) {
-  ._wjo0ey {
+  .page-shell-mobile__footer-wrapper {
     overflow: hidden !important;
     padding-right: 2px !important;
   }
@@ -49220,7 +49220,7 @@ textarea {
     border-radius: 12px !important;
   }
 }
-._1tng6ym {
+.modal__header-wrapper {
   -webkit-box-flex: 0 !important;
   flex: 0 0 16px !important;
   text-align: left !important;
@@ -49229,7 +49229,7 @@ textarea {
   overflow: hidden !important;
   text-overflow: ellipsis !important;
 }
-._rrmdgl {
+.modal__heading-wrapper {
   -webkit-box-flex: 0 !important;
   flex: 0 0 16px !important;
   text-align: right !important;
@@ -52342,7 +52342,7 @@ a:hover {
   line-height: 18px !important;
   margin-top: 2px !important;
 }
-._1mqc21n {
+.page-shell-mobile__container-ml-16 {
   margin-left: 16px !important;
 }
 ._g4rlqtx {
