--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,11 +1,11 @@
-._1mqc21n {
+.page-shell-mobile__container-ml-16 {
   margin-left: 16px!important
 }
 ._18dgbyf,
 .mb2 {
   margin-bottom: 16px!important
 }
-._1mqc21n,
+.page-shell-mobile__container-ml-16,
 .ml2 {
   margin-left: 16px!important
 }
@@ -46,7 +46,7 @@
   }
 }
 @media (min-width:744px) {
-  ._1udzt2s,
+  .page-shell-mobile__display-none,
   .hide-md {
     display: none!important
   }
@@ -1108,7 +1108,7 @@
     border-radius: 12px!important
   }
 }
-._1pusc02v {
+.footer__max-width {
   -webkit-box-direction: normal!important;
   -webkit-box-orient: vertical!important;
   background: #fff!important;
@@ -1127,7 +1127,7 @@
   animation-name: keyframe_d37zz3!important
 }
 @media (min-width:744px) {
-  ._1pusc02v {
+  .footer__max-width {
     width: 100%!important;
     max-width: 376px!important;
     border-radius: 12px!important
