--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13572,14 +13572,14 @@ fieldset[disabled] .btn {
 }
 /* /Tooltip */
 
-.page-shell-mobile__container-ml-16 {
+._1mqc21n {
   margin-left: 16px!important
 }
 ._18dgbyf,
 .mb2 {
   margin-bottom: 16px!important
 }
-.page-shell-mobile__container-ml-16,
+._1mqc21n,
 .ml2 {
   margin-left: 16px!important
 }
@@ -14676,7 +14676,7 @@ fieldset[disabled] .btn {
   }
 }
 @media (min-width:744px) {
-  ._1ucy1zjv {
+  .modal-dialog__content-wrapper {
     width: 100%!important;
     max-width: 568px!important;
     border-radius: 12px!important
@@ -14708,7 +14708,7 @@ fieldset[disabled] .btn {
   }
 }
 @media (min-width:744px) {
-  ._1youxq0 {
+  .modal__header-container {
     min-height: 64px!important
   }
 }
