--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -47758,7 +47758,7 @@ tr.show-desktop {
   background-color: #b0b0b0 !important;
   border-color: #b0b0b0 !important;
 }
-._1youxq0 {
+.modal__header-container {
   -webkit-box-pack: justify !important;
   -webkit-box-align: center !important;
   display: flex !important;
@@ -47774,7 +47774,7 @@ tr.show-desktop {
   font-weight: 800 !important;
 }
 @media (min-width: 744px) {
-  ._1youxq0 {
+  .modal__header-container {
     min-height: 64px !important;
   }
 }
@@ -49195,7 +49195,7 @@ textarea {
   font-weight: 600 !important;
   border-top: 1px solid #ddd !important;
 }
-._1ucy1zjv {
+.modal-dialog__content-wrapper {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   background: #fff !important;
@@ -49214,7 +49214,7 @@ textarea {
   animation-name: keyframe_d37zz3 !important;
 }
 @media (min-width: 744px) {
-  ._1ucy1zjv {
+  .modal-dialog__content-wrapper {
     width: 100% !important;
     max-width: 568px !important;
     border-radius: 12px !important;
@@ -49225,7 +49225,7 @@ textarea {
   flex: 0 0 16px !important;
   text-align: left !important;
 }
-._1q9sh65 {
+.modal__header-text {
   overflow: hidden !important;
   text-overflow: ellipsis !important;
 }
@@ -52342,7 +52342,7 @@ a:hover {
   line-height: 18px !important;
   margin-top: 2px !important;
 }
-.page-shell-mobile__container-ml-16 {
+._1mqc21n {
   margin-left: 16px !important;
 }
 ._g4rlqtx {
