--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,11 +1,11 @@
-.page-shell-mobile__container-ml-16 {
+._1mqc21n {
   margin-left: 16px!important
 }
 ._18dgbyf,
 .mb2 {
   margin-bottom: 16px!important
 }
-.page-shell-mobile__container-ml-16,
+._1mqc21n,
 .ml2 {
   margin-left: 16px!important
 }
@@ -1102,7 +1102,7 @@
   }
 }
 @media (min-width:744px) {
-  ._1ucy1zjv {
+  .modal-dialog__content-wrapper {
     width: 100%!important;
     max-width: 568px!important;
     border-radius: 12px!important
@@ -1134,7 +1134,7 @@
   }
 }
 @media (min-width:744px) {
-  ._1youxq0 {
+  .modal__header-container {
     min-height: 64px!important
   }
 }
